# noises

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/marker/: trait.Copy.js
noises/: fn.init.html  index.html
noises/param/cipher/cha_cha_poly/: sidebar-items.js
noises/sodium/ffi/: enum.c_void.html  sidebar-items.js  type.c_int.html  type.c_ulonglong.html  type.size_t.html
src/: lib.rs
src/noises/: lib.rs.html
src/noises/param/: mod.rs.html
src/noises/param/cipher/: cha_cha_poly.rs.html  mod.rs.html
src/noises/sodium/: ffi.rs.html  mod.rs.html
src/param/cipher/: cha_cha_poly.rs  mod.rs
src/param/dh/: curve_25519.rs  mod.rs
src/sodium/: aead_chachapoly1305.rs  auth_hmacsha256.rs  ffi.rs  hash_sha256.rs  mod.rs  scalarmult_curve25519.rs  stream_chacha20.rs
